# src/community/ogcapi/ogcapi-maps/src/main/resources/org/geoserver/ogcapi/v1/maps/openapi.yaml
@@ -170,10 +170,17 @@ paths:
         - $ref: '#/components/parameters/collectionId'
         - $ref: '#/components/parameters/f-info'
         - $ref: '#/components/parameters/bbox'
+        - $ref: '#/components/parameters/bbox-crs'
+        - $ref: '#/components/parameters/subset'
+        - $ref: '#/components/parameters/subset-crs'
+        - $ref: '#/components/parameters/center'
+        - $ref: '#/components/parameters/center-crs'
         - $ref: '#/components/parameters/crs'
         - $ref: '#/components/parameters/datetime'
         - $ref: '#/components/parameters/width'
         - $ref: '#/components/parameters/height'
+        - $ref: '#/components/parameters/scale-denominator'
+        - $ref: '#/components/parameters/mm-per-pixel'
         - $ref: '#/components/parameters/i'
         - $ref: '#/components/parameters/j'
         - $ref: '#/components/parameters/limit'
@@ -194,10 +201,17 @@ paths:
         - $ref: '#/components/parameters/styleId'
         - $ref: '#/components/parameters/f-info'
         - $ref: '#/components/parameters/bbox'
+        - $ref: '#/components/parameters/bbox-crs'
+        - $ref: '#/components/parameters/subset'
+        - $ref: '#/components/parameters/subset-crs'
+        - $ref: '#/components/parameters/center'
+        - $ref: '#/components/parameters/center-crs'
         - $ref: '#/components/parameters/crs'
         - $ref: '#/components/parameters/datetime'
         - $ref: '#/components/parameters/width'
         - $ref: '#/components/parameters/height'
+        - $ref: '#/components/parameters/scale-denominator'
+        - $ref: '#/components/parameters/mm-per-pixel'
         - $ref: '#/components/parameters/i'
         - $ref: '#/components/parameters/j'
         - $ref: '#/components/parameters/limit'
